samples/_failures_safe/1761407688_a994ba_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ee6b15e3.c: In function ‘main’:
./samples/SAFE/__tmp_ee6b15e3.c:129:16: error: missing terminating " character
  129 |         printf("Failed to create matrix A.\n
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_ee6b15e3.c:129:9: error: expected expression at end of input
  129 |         printf("Failed to create matrix A.\n
      |         ^~~~~~
./samples/SAFE/__tmp_ee6b15e3.c:129:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ee6b15e3.c:129:9: error: expected declaration or statement at end of input
